Adjust services and controller
Signed-off-by: Ivo Quiring <falk.quiring@gmail.com>