@@ -3,10 +3,7 @@ package de.gaz.eedu.user.privileges;
 import de.gaz.eedu.entity.EntityService;
 import de.gaz.eedu.exception.CreationException;
 import de.gaz.eedu.exception.OccupiedException;
-import de.gaz.eedu.user.UserEntity;
-import de.gaz.eedu.user.group.GroupEntity;
 import de.gaz.eedu.user.group.GroupService;
-import de.gaz.eedu.user.model.UserCreateModel;
 import de.gaz.eedu.user.privileges.model.PrivilegeCreateModel;
 import de.gaz.eedu.user.privileges.model.PrivilegeModel;
 import lombok.AccessLevel;
@@ -14,45 +11,31 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service @AllArgsConstructor @Getter(AccessLevel.PROTECTED) public class PrivilegeService extends EntityService<PrivilegeRepository, PrivilegeEntity, PrivilegeModel, PrivilegeCreateModel>
 {
 
-    @Getter(AccessLevel.NONE)
-    private final PrivilegeRepository privilegeRepository;
+    @Getter(AccessLevel.PROTECTED)
+    private final PrivilegeRepository repository;
     private final GroupService groupService;
 
-    @Override
-    public @NotNull PrivilegeRepository getRepository()
+    @Transactional
+    @Override public @NotNull List<PrivilegeEntity> createEntity(@NotNull Set<PrivilegeCreateModel> createModel) throws CreationException
     {
-        return privilegeRepository;
-    }
-
-    @Override public @NotNull PrivilegeEntity[] createEntity(@NotNull PrivilegeCreateModel... createModel) throws CreationException
-    {
-        List<String> loginNames = Arrays.stream(createModel).map(PrivilegeCreateModel::name).toList();
-        boolean duplicates = loginNames.size() != loginNames.stream().collect(Collectors.toUnmodifiableSet()).size();
-
-        if(duplicates || getRepository().existsByNameIn(loginNames))
+        if (getRepository().existsByNameIn(createModel.stream().map(PrivilegeCreateModel::name).toList()))
         {
             throw new OccupiedException();
         }
 
-        PrivilegeEntity[] entities = new PrivilegeEntity[createModel.length];
-        Function<PrivilegeCreateModel, PrivilegeEntity> toEntity = current -> current.toEntity(new PrivilegeEntity());
-        return getRepository().saveAll(Stream.of(createModel).map(toEntity).collect(Collectors.toList())).toArray(entities);
+        return saveEntity(createModel.stream().map(privilege -> privilege.toEntity(new PrivilegeEntity())).toList());
     }
 
     @Override public void deleteRelations(@NotNull PrivilegeEntity entry)
     {
-        Set<GroupEntity> groups = entry.getGroupEntities();
-        groups.forEach(group -> group.revokePrivilege(getGroupService(), entry.getId()));
+        entry.getGroupEntities().forEach(group -> group.revokePrivilege(getGroupService(), entry.getId()));
     }
 }
